--- a/style.css
+++ b/style.css
@@ -6,9 +6,7 @@ body {
     font-size: large;
     display: flex;
     justify-content: center;
-    align-items: center;
-    
-  
+    align-items: center;  
   }
   
   form {
@@ -182,7 +180,7 @@ input[type="text"] {
 
   .form-topic{
     display: flex;
-flex-flow: column;
+   flex-flow: column;
   }
 
 
@@ -245,3 +243,35 @@ flex-flow: column;
     margin-bottom: 8px;
     padding:10px;
   }
+
+.btn {
+  
+  background-color: rgb(252, 252, 252);
+  border-radius: 3px ;
+}
+a {
+  color: black;
+  text-decoration: none;
+
+  font-size: 50x;
+}
+  .btn:hover{
+    color: #026AAC;
+    background: rgb(170, 167, 167);
+  }
+
+section{
+    width: 870px;
+    height: 100%;
+    margin-left: 10px;
+    float: left;
+    background-color: #fff;
+    box-sizing: border-box;
+    padding: 10px;
+}
+.container1 {
+  margin: auto;
+  width: 1200px;
+  margin-top: 20px;
+  padding: 10px;
+}
