--- a/style.css
+++ b/style.css
@@ -275,3 +275,10 @@ section{
   margin-top: 20px;
   padding: 10px;
 }
+.article{
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  background-color: #d6d5d5;
+  margin-bottom: 5px;
+}
